# langchain-deepresearch

./: .gitignore  README.md  log.md  main.py  pyproject.toml
deep_research/: evalution.py  graph.py  mcp.py  message.py  model.py  research_graph.py  scope_graph.py  tools.py  tools1.py  util.py
deep_research/graphs/: full_graph.py  research_graph.py
deep_research/nodes/: node.py  report_generation_node.py  research_node.py  supervisor_node.py
deep_research/states/: schema_research.py  schemas.py  state_research.py  state_scope.py  state_supervisor.py
