[project]
name = "langchain-deepresearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.5.0",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.20",
    "langchain-community>=0.3.29",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-ollama>=0.3.7",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.6",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "tavily-python>=0.7.11",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]
